log/build_2023-12-22_05-05-43/NuevaBaseMetal2/stdout_stderr.log
CMake Warning (dev) at CMakeLists.txt:3 (project):
  Policy CMP0048 is not set: project() command manages VERSION variables.
  Run "cmake --help-policy CMP0048" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.

  The following variable(s) would be set to empty:

    CMAKE_PROJECT_VERSION
    CMAKE_PROJECT_VERSION_MAJOR
    CMAKE_PROJECT_VERSION_MINOR
    CMAKE_PROJECT_VERSION_PATCH
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Using CATKIN_DEVEL_PREFIX: /home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/devel
-- Using CMAKE_PREFIX_PATH: /home/deivideich/articubot_example/install/articubot_one;/home/deivideich/Holonomic_Base_Simulation/ros_1_ws/devel;/home/deivideich/ros_1_ws/devel;/opt/ros/noetic
-- This workspace overlays: /home/deivideich/Holonomic_Base_Simulation/ros_1_ws/devel;/home/deivideich/ros_1_ws/devel;/opt/ros/noetic
-- Found PythonInterp: /usr/bin/python3 (found suitable version "3.8.10", minimum required is "3") 
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Using Debian Python package layout
-- Using empy: /usr/lib/python3/dist-packages/em.py
-- Using CATKIN_ENABLE_TESTING: ON
-- Call enable_testing()
-- Using CATKIN_TEST_RESULTS_DIR: /home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/test_results
-- Forcing gtest/gmock from source, though one was otherwise available.
-- Found gtest sources under '/usr/src/googletest': gtests will be built
-- Found gmock sources under '/usr/src/googletest': gmock will be built
-- Found PythonInterp: /usr/bin/python3 (found version "3.8.10") 
-- Using Python nosetests: /usr/bin/nosetests3
-- catkin 0.8.10
-- BUILD_SHARED_LIBS is on
Traceback (most recent call last):
  File "/home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/catkin_generated/generate_cached_setup.py", line 22, in <module>
    code = generate_environment_script('/home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/devel/env.sh')
  File "/opt/ros/noetic/lib/python3/dist-packages/catkin/environment_cache.py", line 63, in generate_environment_script
    env_after = ast.literal_eval(output.decode('utf8'))
  File "/usr/lib/python3.8/ast.py", line 59, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    ROS_DISTRO was set to 'foxy' before. Please make sure that the environment does not mix paths from different distributions.
               ^
SyntaxError: invalid syntax
CMake Error at /opt/ros/noetic/share/catkin/cmake/safe_execute_process.cmake:11 (message):
  execute_process(/usr/bin/python3
  "/home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/catkin_generated/generate_cached_setup.py")
  returned error code 1
Call Stack (most recent call first):
  /opt/ros/noetic/share/catkin/cmake/all.cmake:208 (safe_execute_process)
  /opt/ros/noetic/share/catkin/cmake/catkinConfig.cmake:20 (include)
  CMakeLists.txt:5 (find_package)


-- Configuring incomplete, errors occurred!
See also "/home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/CMakeFiles/CMakeOutput.log".
See also "/home/deivideich/Holonomic_Base_Simulation/build/NuevaBaseMetal2/CMakeFiles/CMakeError.log".
